--- a/package.json
+++ b/package.json
@@ -9,11 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "pinia": "^2.2.4",
+    "pinia-plugin-persistedstate": "^4.1.2",
     "vue": "^3.5.12",
+    "vue-router": "^4.4.5",
     "vue-study": "file:"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "sass": "^1.80.4",
+    "scss": "^0.2.4",
     "vite": "^5.4.8"
   }
 }
